<resources>
    <string name="app_name">Olleego</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
<string name="dirrhks">"개인정보 취급방침

㈜이든이노베이션에서 제공하는 올리고 서비스는 아래의 목적으로 정보를 수집 및 이용하며, 회원의 개인정보를 안전하게 취급하는데 최선을 다합니다.

- 목적 : 회원가입 및 이용자 식별, 회원관리
- 필수항목 : 이메일 주소, 이름(SNS닉네임), 생년월일, 성별, SNS가입계정
- 선택항목 : 키, 몸무게, 허리둘레, 엉덩이둘레
- 보유기간 : 회원탈퇴 후 지체없이 삭제

위 정보는 서비스 제공을 위해 필요한 최소한의 개인정보이므로 동의를 해 주셔야 서비스 이용이 가능합니다.

더 자세한 내용에 대해서는 아래의 개인정보처리방침을 참고하시기를 바랍니다.


[주식회사 이든이노베이션에서 제공하는 ‘올리고 ’]의 개인정보처리방침

[올리고]가 취급하는 모든 개인정보는 관련 법령에 근거하여 수집 · 보유 및 처리되고 있습니다. 「개인정보보호법」은 이러한 개인정보의 취급에 대한 일반적 규범을 제시하고 있으며, [올리고]는 이러한 법령의 규정에 따라 수집 · 보유 및 처리하는 개인정보를 공공업무의 적절한 수행과 이용자의 권익을 보호하기 위해 적법하고 적정하게 취급할 것입니다.
또한, [올리고]는 관련 법령에서 규정한 바에 따라 보유하고 있는 개인정보에 대한 열람, 정정·삭제, 처리정지 요구 등 이용자의 권익을 존중하며, 이용자는 이러한 법령상 권익의 침해 등에 대하여 행정심판법에서 정하는 바에 따라 행정심판을 청구할 수 있습니다.
[올리고]는 개인정보보호법 제 30조에 따라 정보주체의 개인정보 보호 및 권익을 보호하고 개인정보와 관련한 이용자의 고충을 원활하게 처리할 수 있도록 다음과 같은 개인정보처리방침을 수립 · 공개하고 있습니다.
[올리고]는 회사는 개인정보처리방침을 개정하는 경우 웹사이트 공지사항(또는 이메일을 통한 개별공지)을 통하여 공지할 것입니다.
○ 본 방침은 2016년 2월 15일부터 시행됩니다.

제 1조 (개인정보의 처리 목적)

① [올리고]는 개인정보를 다음의 목적을 위해 처리합니다. 처리한 개인정보는 다음의 목적 이외의 용도로는 사용되지 않으며 이용 목적이 변경될 시에는 사전동의를 구할 예정입니다.
가. 회원가입 및 관리
회원의 가입의사 확인, 회원자격 유지·관리 등을 목적으로 개인정보를 처리합니다.

나. 서비스 제공
회원의 건강관리 정보 제공, 회원 개인의 맞춤형 서비스 제공 등을 목적으로 개인정보를 처리합니다.
새로운 서비스 개발 및 특화, 기능 개선에 따른 서비스 제공을 목적으로 개인정보를 처리 합니다.

다. 민원처리
서비스 이용과 관련된 문의나 분쟁이 있는 경우, 유료 서비스 이용시 컨텐츠의 전송이나 배송, 요금 정산을 목적으로 개인정보를 처리 합니다.

라. 마케팅 및 광고에의 활용
이벤트 및 광고성 정보 제공 및 참여기회 제공 등을 목적으로 개인정보를 처리합니다.
제 2조 (수집하는 개인정보)
올리고에서 제공하는 서비스를 위해 수집하는 개인정보에 대하여 이용자의 동의를 받고 서비스를 제공하고 있습니다.
①	회원가입 시점에 [올리고]에서 이용자로부터 수집하는 개인정보는 아래와 같습니다.
회원가입시 ‘SNS가입 계정, 이메일주소, 이름(SNS닉네임), 생년월일, 성별’을 필수 항목으로 수집합니다.
②	서비스의 이용과정에서 단말기 정보(OS, 화면사이즈, 디바이스 아이디)IP 주소, 쿠키정보가 자동으로 생성되어 수집될 수 있습니다.
③	[올리고]서비스를 원활하게 제공하고, 최적의 맞춤형 서비스를 제공하기 위해 개인의 신체 계측정보 ‘키, 몸무게, 허리둘레, 엉덩이둘레, 체지방률, 체지방량, 근육량’, 개인의 건강측정 정보 ‘혈압, 혈당’ 등 서비스 제공을 위한 필요 정보가 수집됩니다.
④	[올리고]에서 제공하는 유료서비스를 이용하는 과정에서 결제 등을 위하여 신용카드 정보, 통신사정보 등과 같이 결제에 필요한 정보가 수집될 수 있습니다.

제 3조 (개인정보의 처리 및 보유 기간)
①	[올리고]는 회원의 개인정보 취급방침 동의를 받은 개인정보의 수집 및 이용목적이 달성되면 법령 또는 내부 방침에 의해 보존할 필요가 있는 경우를 제외하고는 지체없이 파기 됩니다. 전자적 파일 형태로 저장된 개인정보는 기록을 재생할 수 없는 기술적 방법을 이용하여 삭제합니다. 다만, 서비스의 부정한 이용으로 인한 분쟁을 방지하기 위한 내부 방침에 따라 서비스의 부정이용기록은 1년간 보존한 다음 위의 방법으로 파기 됩니다.
②	[올리고]에서 법령에 따라 보관하는 개인정보 및 해당 법령은 다음과 같습니다.

가. 보존항목 : 계약 또는 청약 철회 등에 관한 기록
- 근거 법령 : 전자상거래 등에서의 소비자 보호에 관한 법률
- 보존기간 : 5년

나. 보존항목 : 대금 결제 및 재화 등의 공급에 관한 기록
- 근거 법령 : 전자상거래 등에서의 소비자 보호에 관한 법률
- 보존기간 : 5년

다. 보존항목 : 소비자의 불만 또는 분쟁처리에 관한 기록
- 근거 법령 : 전자상거래 등에서의 소비자 보호에 관한 법률
- 보존기간 : 3년

라. 보존항목 : 전자금융거래에 관한 기록
- 근거 법령 : 전자금융거래법
- 보존기간 : 5년

마. 보존항목 : 서비스 방문기록
- 근거 법령 : 통신비밀보호법
- 보존기간 : 3개월



제 4조 (정보주체의 권리,의무 및 그 행사방법)
 이용자는 개인정보주체로서 다음과 같은 권리를 행사할 수 있습니다.
① 정보주체는 언제든지 각 호의 개인정보 보호 관련 권리를 행사할 수 있습니다.
- 개인정보 열람요구
- 오류 등이 있을 경우 정정 요구
- 삭제요구
4. 처리정지 요구
② 제1항에 따른 권리 행사는(주)이든이노베이션(‘www.olleego.com’이하 ‘올리고) 에 대해 개인정보 보호법 시행규칙 별지 제8호 서식에 따라 서면, 전자우편, 모사전송(FAX) 등을 통하여 하실 수 있으며 (‘사이트URL’이하 ‘사이트명) 은(는) 이에 대해 지체 없이 조치하겠습니다.
③ 정보주체가 개인정보의 오류 등에 대한 정정 또는 삭제를 요구한 경우에는 (‘사이트URL’이하 ‘사이트명) 은(는) 정정 또는 삭제를 완료할 때까지 당해 개인정보를 이용하거나 제공하지 않습니다.
④ 제1항에 따른 권리 행사는 정보주체의 법정대리인이나 위임을 받은 자 등 대리인을 통하여 하실 수 있습니다. 이 경우 개인정보 보호법 시행규칙 별지 제11호 서식에 따른 위임장을 제출하셔야 합니다.

제 5조 (처리하는 개인정보의 항목 작성 	)
① [올리고]는다음의 개인정보 항목을 처리하고 있습니다.
- 필수항목 : 이메일, 성별, 생년월일, 이름(SNS닉네임)
- 선택항목 : 신체계측정보(키,몸무게, 허리둘레, 엉덩이둘레, 체지방률, 체지방량, 근육량), 건강측정정보(혈압, 혈당)

제 6조 (개인정보의 파기)
① [올리고]는 원칙적으로 개인정보 처리목적이 달성된 경우에는 지체없이 해당 개인정보를 파기합니다. 파기의 절차, 기한 및 방법은 다음과 같습니다.
가.	파기절차
이용자가 입력한 정보는 목적 달성 후 별도의 DB에 옮겨져(종이의 경우 별도의 서류) 내부 방침 및 기타 관련 법령에 따라 일정기간 저장된 후 혹은 즉시 파기됩니다. 이 때, DB로 옮겨진 개인정보는 법률에 의한 경우가 아니고서는 다른 목적으로 이용되지 않습니다.-파기기한이용자의 개인정보는 개인정보의 보유기간이 경과된 경우에는 보유기간의 종료일로부터 5일 이내에, 개인정보의 처리 목적 달성, 해당 서비스의 폐지, 사업의 종료 등 그 개인정보가 불필요하게 되었을 때에는 개인정보의 처리가 불필요한 것으로 인정되는 날로부터 5일 이내에 그 개인정보를 파기합니다.
나.	파기방법
전자적 파일 형태의 정보는 기록을 재생할 수 없는 기술적 방법을 사용합니다.

제 7조 (개인정보의 안전성 확보 조치)
①  [올리고]는 개인정보보호법 제29조에 따라 다음과 같이 안전성 확보에 필요한 기술적/관리적 및 물리적 조치를 하고 있습니다.
가.	정기적인 자체 점검 실시
개인정보 취급 관련 안정성 확보를 위해 자체적으로 시스템을 점검하고 있습니다.
나.	개인정보 취급 직원의 최소화 및 교육
개인정보를 취급하는 직원을 지정하고 담당자에 한정시켜 최소화 하여 개인정보를 관리하는 대책을 시행하고 있습니다.
다.	내부관리계획의 수립 및 시행
개인정보의 안전한 처리를 위하여 내부관리계획을 수립하고 시행하고 있습니다.
라.	개인정보의 암호화
이용자의 개인정보는 비밀번호는 암호화 되어 저장 및 관리되고 있어, 본인만이 알 수 있으며 중요한 데이터는 파일 및 전송 데이터를 암호화 하거나 파일 잠금 기능을 사용하는 등의 별도 보안기능을 사용하고 있습니다.
마.	접속기록의 보관 및 위변조 방지
개인정보처리시스템에 접속한 기록을 최소 6개월 이상 보관, 관리하고 있으며, 접속 기록이 위변조 및 도난, 분실되지 않도록 보안기능 사용하고 있습니다.
바.	개인정보에 대한 접근 제한
개인정보를 처리하는 데이터베이스시스템에 대한 접근권한의 부여, 변경, 말소를 통하여 개인정보에 대한 접근통제를 위하여 필요한 조치를 하고 있습니다.

제 7조 (개인정보 보호책임자 작성)
① (주)이든이노베이션(‘www.olleego.com’이하 ‘올리고) 은(는) 개인정보 처리에 관한 업무를 총괄해서 책임지고, 개인정보 처리와 관련한 정보주체의 불만처리 및 피해구제 등을 위하여 아래와 같이 개인정보 보호책임자를 지정하고 있습니다.

▶ 개인정보 보호책임자
성명 :박남영
직책 :부장
연락처 :070-8249-1582,
메일주소family@edninnovation.net,
※ 개인정보 보호 담당부서로 연결됩니다.

② 정보주체는 [올리고]의 서비스를 이용하면서 발생한 모든 개인정보 보호 관련 문의, 불만처리, 피해구제 등에 관한 사항을 개인정보 보호책임자 및 담당부서로 문의하실 수 있습니다. [올리고] 정보주체의 문의에 대해 지체 없이 답변 및 처리해드릴 것입니다.

제 8조 (개인정보처리방침 변경)
①	이 개인정보처리방침은 시행일로부터 적용되며, 법령 및 방침에 따른 변경내용의 추가, 삭제 및 정정이 있는 경우에는 변경사항의 시행 7일 전부터 공지사항을 통하여 고지할 것입니다.
②	본 개인정보처리방침의 내용은 수시로 변경될 수 있으므로 서비스를 이용하실 때 마다, 이를 확인하시기 바랍니다.

-	공고일자 : 2016년 2월 25일
-	시행일자 : 2016년 2월 25일
"</string>
    <string name="review_text">리뷰는 구매한 회원만 작성 가능합니다.</string>
    <string name="write_review">리뷰 작성하기</string>
    <string name="review">리뷰</string>
    <string name="empty_review">등록된 리뷰가 없습니다.</string>
    <string name="write_review_title">리뷰작성</string>
    <string name="write_review_confirm">확인</string>
    <string name="write_review_text1">• 리뷰할 트레이너 선택하기</string>
    <string name="write_review_text2">• 트레이너 평가하기</string>
    <string name="drag_ratingbar">좌우로 드래그 하세요</string>
    <string name="write_review_text3">센터 이용후기 및 트레이너 후기를 작성해주세요 (500자이내)</string>
    <string name="dialog_delete_review">리뷰를 삭제합니다.</string>
    <string name="dialog_cancel">취소</string>
    <string name="dialog_delete">삭제</string>
    <string name="dialog_confirm">확인</string>
    <string name="dialog_location_service">위치 서비스 사용 안내</string>
    <string name="dialog_location_service_content">내 주변 센터를 제공하기 위해 정확한\n위치 정보가 필요합니다.\n위치정보사용에 동의해주세요.</string>
    <string name="dialog_location_agree">동의</string>
    <string name="dialog_location_disagree">동의 안함</string>
    <string name="center_short_cut">제휴센터 바로가기</string>
    <string name="purchase_empty_view_text">구매한 PT 이용권이 없습니다.</string>
    <string name="purchase_empty_view_text2">바로가기 버튼을 누르시면,\n올리고와 제휴된 센터를 추가할 수 있습니다.</string>
</resources>