<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/light_grey_bg1">

        <TextView
            android:id="@+id/textView51"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="31dp"
            android:text="@string/review_text"
            android:textColor="#606060"
            android:textSize="12sp" />

        <RelativeLayout
            android:id="@+id/write_review"
            android:layout_width="222dp"
            android:layout_height="38dp"
            android:layout_below="@+id/textView51"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:background="@drawable/alliance_review_btn_bg">

            <TextView
                android:id="@+id/textView53"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/write_review"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView54"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/write_review"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="40dp"
            android:text="@string/review"
            android:textColor="#606060"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/review_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView54"
            android:layout_marginLeft="10dp"
            android:layout_toEndOf="@+id/textView54"
            android:layout_toRightOf="@+id/textView54"
            android:textColor="@color/fitness_blue"
            android:textSize="12sp"
            android:text="0"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/empty_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="51dp"
            android:layout_marginTop="51dp"
            android:text="@string/empty_review"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>