<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="248dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="39dp">

            <TextView
                android:id="@+id/text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/dialog_location_service"
                android:textColor="#454544"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView63"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="42dp"
                android:lineSpacingMultiplier="1.2"
                android:gravity="center"
                android:text="@string/dialog_location_service_content"
                android:textColor="#606060"
                android:textSize="14sp" />
        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:id="@+id/layout_two_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:visibility="visible"
                android:weightSum="2">

                <RelativeLayout
                    android:id="@+id/layout_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#f0f1ed">

                    <TextView
                        android:id="@+id/text_cancel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/dialog_location_disagree"
                        android:textColor="#606060"
                        android:textSize="14sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/layout_ok"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/fitness_blue">

                    <TextView
                        android:id="@+id/text_ok"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/dialog_location_agree"
                        android:textColor="@color/white"
                        android:textSize="14sp" />
                </RelativeLayout>
            </LinearLayout>

        </FrameLayout>

    </RelativeLayout>
</LinearLayout>