<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_grey_bg1">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp" />

        <RelativeLayout
            android:id="@+id/empty_view_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView72"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="37dp"
                android:text="@string/purchase_empty_view_text"
                android:textColor="#606060"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView73"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView72"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/purchase_empty_view_text2"
                android:textColor="#606060"
                android:textSize="12sp" />

            <RelativeLayout
                android:id="@+id/center_shortcut"
                android:layout_width="154dp"
                android:layout_height="38dp"
                android:layout_below="@+id/textView73"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="26dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/mycenter_reservation_shortcut_bg">

                <TextView
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="16dp"
                    android:text="@string/center_short_cut"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </RelativeLayout>
        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>